# sharp_interface_fracture

./: CMakeLists.txt  LIMITATIONS.md  README.md  THEORY.md  a  a.pub  generate_tpb_mesh.py  reproduce_all_results.sh  requirements.txt
include/: adaptive_stepping.hpp  assembler.hpp  config_force.hpp  crack.hpp  field_transfer.hpp  hybrid_strategy.hpp  material.hpp  mesh.hpp  remesher.hpp  simulation_config.hpp  vtk.hpp
scripts/: generate_meshes.py
src/: assembler.cpp  config_force.cpp  crack.cpp  field_transfer.cpp  main.cpp  mesh.cpp  remesher.cpp  simulation_config.cpp  vtk.cpp
tests/: check_energy_monotonicity.py  compute_convergence_rate.py  test_elasticity_consistency.cpp  test_patch_test.cpp
